--- a/iter2/styles/scss/pages/_home.scss
+++ b/iter2/styles/scss/pages/_home.scss
@@ -31,13 +31,13 @@
 // ==== CAROUSEL ====
 .section--carousel {
   background-color: rgba(0,0,0,0);
-  padding-bottom: 0;
+  padding: 300px 0 140px 0;
 }
 
 .matte--carousel {
   position: absolute;
-  top: 600px;
-  height: 600px;
+  top: 850px;
+  height: 1000px;
 }
 
 .carousel--main {
